Implement HTMLMenuItemElement.label

This CL implements HTMLMenuItemElement.label so that the behavior matches the current spec.
The label of a menuitem element is the value of the label content attribute, if there is one and its value is not the empty string, or, otherwise, the result of stripping and collapsing ASCII whitespace from the child text content of the menuitem element.

https://html.spec.whatwg.org/multipage/forms.html#dom-menuitem-label
https://html.spec.whatwg.org/multipage/forms.html#concept-menuitem-label

BUG=713431

Review-Url: https://codereview.chromium.org/2841473002
Cr-Commit-Position: refs/heads/master@{#467487}

Former-commit-id: ae4d8f00071215f9dfe05e1d762f34833c0eec9b